<resources>
    <string name="app_name">SnakeGame</string>
    <string name="game_over_score">your score is %s</string>
    <string name="game_score">SCORE: %s</string>
    <string name="try_again">try again</string>
    <string name="game_over">Game Over</string>
    <string name="up">Up</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="down">Down</string>
    <string name="snakegame">SnakeGame</string>
    <string name="people_s_favorite">people\'s favorite</string>
    <string name="start">start</string>
</resources>
