<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#c4bfba"
    tools:context=".GameActivity">

    <TextView
        android:id="@+id/gameScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_score"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/gameView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.tsitokhtsev.snakegame.view.GameView
        android:id="@+id/gameView"
        android:layout_width="@dimen/map_size"
        android:layout_height="@dimen/map_size"
        android:background="#7d9f52"
        app:layout_constraintBottom_toTopOf="@+id/controls"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gameScore"
        tools:context=".GameActivity">

        <!--        <TextView-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="match_parent"-->
        <!--            android:gravity="center"-->
        <!--            android:text="GAME OVER"-->
        <!--            android:textColor="@color/yellow"-->
        <!--            android:textSize="34sp"-->
        <!--            android:textStyle="bold"-->
        <!--            android:visibility="invisible" />-->
    </com.tsitokhtsev.snakegame.view.GameView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/controls"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gameView">

        <ImageButton
            android:id="@+id/buttonUp"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/control_background"
            android:contentDescription="@string/up"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_arrow_drop_up_24"
            app:tint="@color/white" />

        <ImageButton
            android:id="@+id/buttonLeft"
            android:layout_width="80dp"
            android:layout_height="80dp"

            android:background="@drawable/control_background"
            android:contentDescription="@string/left"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toStartOf="@+id/buttonUp"
            app:layout_constraintTop_toBottomOf="@id/buttonUp"
            app:srcCompat="@drawable/ic_baseline_arrow_left_24"
            app:tint="@color/white" />

        <ImageButton
            android:id="@+id/buttonRight"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/control_background"
            android:contentDescription="@string/right"
            android:scaleType="fitCenter"
            app:layout_constraintStart_toEndOf="@+id/buttonUp"
            app:layout_constraintTop_toBottomOf="@+id/buttonUp"
            app:srcCompat="@drawable/ic_baseline_arrow_right_24"
            app:tint="@color/white" />

        <ImageButton
            android:id="@+id/buttonDown"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/control_background"
            android:contentDescription="@string/down"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonLeft"
            app:srcCompat="@drawable/ic_baseline_arrow_drop_down_24"
            app:tint="@color/white" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>